# rust_todo_list

./: .env  Cargo.toml  README.md  database.sql
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
